test/library/standard/Reflection/getFieldRef-param.1.good
getFieldRef-param.chpl:14: error: cannot return a reference to 'param' field 'x'
