test/library/standard/Reflection/getFieldRef-param.compopts
-scase=0
-scase=1
-scase=2
